[package]
name = "reportes"
version = "0.1.0"
authors = [
    "[Simon Bierozko] <[simon.bierozko@gmail.com]>",
]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
base64ct = { version = "=1.6.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
market = { path = "../RustMarket", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "market/std"]
ink-as-dependency = []
e2e-tests = []
